--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 </head>
 
 <body>
+<main>
+
 
   <section id="title">
     <div class="container-fluid">
@@ -224,13 +226,13 @@ Downloadable CV!
 
 
 
-
+</main>
 
 
 
   <!-- Footer -->
 
-
+<footer>
   <div class="footer-container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -241,7 +243,7 @@ Downloadable CV!
       <p class="text-center text-muted">© 2021 Claudia Margarita Fernández Rivera </p>
     </footer>
   </div>
-
+</footer>
 </body>
 
 </html>
