--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,9 @@
 </head>
 
 <body>
+  <main>
+
+
   <section id="title">
     <div class="container-fluid">
 
@@ -98,10 +101,10 @@
       </section>
 
 
-
+  </main>
 
       <!-- Footer -->
-
+<footer>
 
       <div class="footer-container">
         <footer class="py-3 my-4">
@@ -113,7 +116,7 @@
           <p class="text-center text-muted">© 2021 Claudia Margarita </p>
         </footer>
       </div>
-
+</footer>
 </body>
 
 </html>
