--- a/about.html
+++ b/about.html
@@ -26,6 +26,9 @@
 </head>
 
 <body>
+  <main>
+
+
   <section id="title">
     <div class="container-fluid">
 
@@ -93,10 +96,10 @@
       </section>
 
 
-
+  </main>
 
       <!-- Footer -->
-
+<footer>
 
       <div class="footer-container">
         <footer class="py-3 my-4">
@@ -109,7 +112,7 @@
         </footer>
       </div>
 
-
+</footer>
 
 
 
