--- a/about.html
+++ b/about.html
@@ -3,12 +3,18 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Claudia Margarita</title>
 
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- javaScript -->
+  <script type="text/javascript"
+    src="java.js" >
+  </script>
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/5ed1935882.js" crossorigin="anonymous"></script>
@@ -88,7 +94,7 @@
 
 <div class="cvdownload">
   <h3 class="cvtitle">Click to read her cv</h3>
-  <a href="/Users/paulinahesselius/Documents/4.Learning/Udemy/Web development/Web development/Claudia Margarita/cvclaudia.pdf" target="_blank"><img src="images/cvclaudiapic.png" class="cvpicture" alt="CV Claudia" ></a>
+  <a href="cvclaudia.pdf" download ><img src="images/cvclaudiapic.png" class="cvpicture" alt="CV Claudia" ></a>
 
 
 </div>
