--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
   <!-- javaScript -->
   <script type="text/javascript"
-    src="java.js" >
+    src="script.js" >
   </script>
 
   <!-- Font Awesome -->
