--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- javaScript -->
   <script type="text/javascript"
-    src="java.js" >
+    src="script.js" >
   </script>
 
   <!-- Font Awesome -->
@@ -91,15 +91,6 @@
   </section>
 
 
-  <!-- Call to Action -->
-
-  <!-- <section id="cta">
-
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
-  </section> -->
 
   <!-- online presentations -->
 
@@ -208,26 +199,7 @@
 
   </section>
 
-  <!-- ABOUT PAGE -->
-  <!-- Claudia Margarita Fernández Rivera is an award-winning designer, age-friendly policy and UX design researcher at the tPOT (towards People Oriented Technology) research group in TU Dublin.
-  <br>
-  <br>
-  She has a BA in Architecture, an Msc in Human Factors & Ergonomics and a Professional Diploma in Planning, Control and Management of Construction Projects.
-  <br>
-  She has been a practicing professional designer for 10 years and has a growing
-  experience in the design of digital solutions.
-
-
-CONTACT PAGE
-  <h3 class="about-info">You can find Claudia Margarita's publications and contact information below </h3>
-  <a class="links" href="https://orcid.org/0000-0003-4226-9262"> Claudias Orcid Page </a>
-
-  <a class="links" href="https://www.linkedin.com/in/claudia-m-fernandez-rivera/"> LinkedIn</a>
-
-Downloadable CV!
-
-
--->
+  
 
 
 
