--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                   <label for="subject">Message</label>
                   <textarea id="subject" name="subject" placeholder="Write something" style="height:200px"></textarea>
                   <!--    <input type="submit" value="Submit" onclick="myFunction()"> -->
-                  <button class="btn" type="button" name="button" onclick="myFunction()">Submit</button>
+                  <button class="btn" type="submit" name="button" onclick="myFunction()">Submit</button>
                </form>
             </div>
          </section>
